<resources>
    <string name="app_name">RKLSocial</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configura</string>
    <string name="title_app_name">RKLSocial</string>
    <string name="text_hint_user_name">Usuario</string>
    <string name="title1">Rocola Social</string>
    <string name="title2">Explora, descubre y comparte la musica de la ciudad</string>
    <string name="text_hint_password">Contraseña</string>
    <string name="forgot_password">I forgot password?</string>
    <string name="labelbuttonLogin">Iniciar</string>
    <string name="labelbuttoncrea">Crea tu Cuenta</string>
    <string name="title_activity_activity_new">ActivityNew</string>
    <string name="text_hint_first_name">Fist Name</string>
    <string name="text_hint_last_name">Last Name</string>
    <string name="text_hint_password1">Password</string>
    <string name="text_hint_password_level1">Password Level 1</string>
    <string name="text_hint_password2">Confirm Password</string>
    <string name="text_hint_password_level2">Paswword Level 2</string>
    <string name="text_hint_phone_number">phone number</string>
    <string name="text_hint_email">email</string>
    <string name="text_btn_creat_acount2">create account2</string>
    <string name="text_btn_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="text_home">By Home</string>
    <string name="text_message_full_fields">Falta algun dato de llenar</string>
    <string name="title_activity_register">Registro de cuenta</string>
    <string name="text_user">User</string>
    <string name="text_password">Password</string>
    <string name="title_activity_form">Register Form</string>
    <string name="title_activity_iniciarsesion">iniciarsesion</string>
    <string name="title_activity_crear_cuenta">CrearCuenta</string>
    <string name="title_activity_iniciar_sesion">IniciarSesion</string>
    <string name="btn_login">Inicia Sesion</string>
    <string name="btn_login_cancela">Cancelar</string>
    <string name="btn_crea_cuenta">Crear Cuenta</string>
    <string name="btn_crea_cuenta_cancela">Cancelar</string>
</resources>
